# ros2-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/udi/ros2_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/udi/ros2_android/: ListenerFragment.kt  MainActivity.kt  TalkerFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_listener.xml  fragment_talker.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/udi/ros2_android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ros2android/: .gitignore  build.gradle  download.gradle  publish.gradle
ros2android/src/androidTest/java/xh/rabbit/ros2android/: ExampleInstrumentedTest.kt
ros2android/src/main/: AndroidManifest.xml
ros2android/src/main/cpp/: CMakeLists.txt  ros2android.cpp
ros2android/src/main/cpp/include/: log.h
ros2android/src/main/java/xh/rabbit/ros2android/: ListenerNode.kt  Ros2Android.kt  TalkerNode.kt
ros2android/src/test/java/xh/rabbit/ros2android/: ExampleUnitTest.kt
